# todoapp_fastapi_sqllite3

./: .env  main.py  pyproject.toml
TodoApp/: .gitignore  alembic.ini  cleanup_ports.py  database.py  main.py  models.py  pyproject.toml  todosapp.db
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
