[project]
name = "todoapp-fastapi-sqllite3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pip>=25.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
